fix: ensure margin collapse fix works with coloured backgrounds
Although the previous fix removed the 1px border, it resulted in a 1px white margin at the top of the component due to the padding.

--- a/packages/core/components/DraggableComponent/styles.module.css
+++ b/packages/core/components/DraggableComponent/styles.module.css
@@ -3,9 +3,14 @@
 }
 
 .DraggableComponent-contents {
-  margin-top: -1px; /* Prevent margin collapsing  */
-  padding-top: 1px; /* Prevent margin collapsing  */
   position: relative; /* Reset stacking context */
+}
+
+/* Prevent margin collapsing  */
+.DraggableComponent-contents::before,
+.DraggableComponent-contents::after {
+  content: " ";
+  display: table;
 }
 
 .DraggableComponent-overlay {
